feat: add a PUT /api/task/:id + refactor task running code #1399